# HRAnalytics

./: .gitignore  1_Analyse_Exploratoire.ipynb  2_Feature_Engineering.ipynb  3_Feature_Modelisation.ipynb  3_Feature_Modelisation_refactoring.ipynb  ExtraitEvaluationsPerformance.csv  ExtraitSIRH.csv  ExtraitSondage.csv  README.md  classification_results_by_class.csv  classification_results_confusion_matrices.csv  classification_results_overfitting_analysis.csv  classification_results_summary.csv  commands  draft.py  fc.csv  fc_after_feature_engineering.csv  gridsearch_results_best_params.csv  gridsearch_results_confusion_matrices.csv  gridsearch_results_evaluation.csv  gridsearch_results_full_cv_results.csv  gridsearch_results_grid_summary.csv  gridsearch_results_overfitting.csv  main.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
exports/: classification_results_by_class.csv  classification_results_confusion_matrices.csv  classification_results_overfitting_analysis.csv  classification_results_summary.csv  gridsearch_results_best_params.csv  gridsearch_results_confusion_matrices.csv  gridsearch_results_evaluation.csv  gridsearch_results_full_cv_results.csv  gridsearch_results_grid_summary.csv  gridsearch_results_overfitting.csv
